# COMP345_Project

./: .gitignore  ArmyUnit.cpp  ArmyUnit.h  CMakeLists.txt  Cards.cpp  Cards.h  CardsDriver.cpp  CardsDriver.h  CommandProcessing.cpp  CommandProcessing.h  CommandProcessingDriver.cpp  CommandProcessingDriver.h  GameEngine.cpp  GameEngine.h  GameEngineDriver.cpp  GameEngineDriver.h  ILoggable.h  LogObserver.cpp  LogObserver.h  LoggingObserverDriver.cpp  MainDriver.cpp  MainDriver.h  Map.cpp  Map.h  MapDriver.cpp  MapDriver.h  Observer.h  Orders.cpp  Orders.h  OrdersDriver.cpp  OrdersDriver.h  Player.cpp  Player.h  PlayerDriver.cpp  PlayerDriver.h  PlayerStrategies.cpp  PlayerStrategies.h  PlayerStrategiesDriver.cpp  PlayerStrategiesDriver.h  README.md  (+5 more)
CommandFiles/: command.txt
MapFiles/: USA_Fail2.map  USA_Fail3.map
